--- a/frontend/src/app/pages/instrumento/instructivo/instructivo.component.html
+++ b/frontend/src/app/pages/instrumento/instructivo/instructivo.component.html
@@ -56,7 +56,7 @@
       ver resultados <nb-icon icon="arrow-forward-outline"></nb-icon> </a>
                 </div>
                 <div *ngIf="_accessChecker.isGranted('Register General User', 'all') | async" class="col-sm-12   mb-3">
-                    <button fullWidth routerLink="/admin/encuestados" nbButton shape="round" outline status="primary">
+                    <button fullWidth routerLink="/admin/opciones" nbButton shape="round" outline status="primary">
           ADMINISTRACIÓN <nb-icon icon="arrow-forward-outline"></nb-icon> </button>
                 </div>
             </div>
