--- a/frontend/src/app/pages/users/users-view/users-view.component.scss
+++ b/frontend/src/app/pages/users/users-view/users-view.component.scss
@@ -74,4 +74,11 @@
             border-left: 1px solid transparent;
         }
     }
+    .infinite-cards {
+        nb-card {
+            &.own-scroll {
+                height: 50vh;
+            }
+        }
+    }
 }
