--- a/frontend/src/app/pages/admin/cno-knowledge-occupation-table/cno-knowledge-occupation-table.component.html
+++ b/frontend/src/app/pages/admin/cno-knowledge-occupation-table/cno-knowledge-occupation-table.component.html
@@ -1,20 +1,42 @@
 <div class="row">
     <div class="col-md-12">
-        <nb-card class="table-list shadow-sm">
+
+        <nb-card class="table-list shadow-sm petit ">
             <nb-card-header>
-                Tablas
+                Tabla Resultados
 
             </nb-card-header>
             <nb-card-body>
-                <nb-list>
-                    <nb-list-item *ngFor="let table of tables" (click)="open(table.model_name)">
+                <nb-list class="d-flex flex-row">
+                    <nb-list-item *ngFor="let table of tables | slice:0:1; let i=index" (click)="open(table.model_name)">
                         <span> <nb-icon icon="file-text-outline"></nb-icon> {{table.name}}  {{model_count[table.name]}} </span>
 
                     </nb-list-item>
                 </nb-list>
             </nb-card-body>
         </nb-card>
+    </div>
+    <!--
+    <div class="col-md-8">
 
+        <nb-card class="table-list shadow-sm  petit">
+            <nb-card-header>
+                Tablas Cargadas
+
+            </nb-card-header>
+            <nb-card-body>
+                <nb-list class="d-flex flex-row">
+                    <nb-list-item *ngFor="let table of tables  | slice:1:10; let i=index" (click)="open(table.model_name)">
+                        <span> <nb-icon icon="file-text-outline"></nb-icon> {{table.name}}  {{model_count[table.name]}} </span>
+
+                    </nb-list-item>
+                </nb-list>
+            </nb-card-body>
+        </nb-card>
+    </div>-->
+</div>
+<div class="row">
+    <div class="col-md-12">
         <nb-card class=" shadow-sm" size="large" [nbSpinner]="loading" nbSpinnerStatus="danger" nbSpinnerSize="large" [nbSpinnerMessage]="progress">
             <nb-card-header>
                 Formulario de actualización Base de datos
